--- a/templates/index.html
+++ b/templates/index.html
@@ -54,6 +54,10 @@
                         <i class="fas fa-chart-line mr-2"></i>
                         Trends
                     </a>
+                    <a href="/reports" class="px-4 py-2 rounded-md hover:bg-green-700 transition-colors duration-200 flex items-center">
+                        <i class="fas fa-file-alt mr-2"></i>
+                        Reports
+                    </a>
                 </nav>
             </div>
         </div>
