--- a/templates/report_detail.html
+++ b/templates/report_detail.html
@@ -41,7 +41,7 @@
             </div>
         {% else %}
             <div class="bg-white rounded-lg shadow-md p-8 text-gray-700">
-                <div class="prose max-w-none">{{ report|safe }}</div>
+                <div class="prose">{{ report|safe }}</div>
             </div>
         {% endif %}
     </main>
